@@ -45,6 +45,7 @@ public:
 	virtual int set_backwards();
 	virtual int following_smart_path()	// Astar?
 		{ return 1; }
+	virtual int get_num_steps();	// # of steps left to take.
 	virtual ~Astar();
 	};
 
