@@ -49,6 +49,8 @@ public:
 
 	// Retrieve the coordinates of the next step on the path
 	virtual	int	GetNextStep(Tile_coord& n);
+	virtual int get_num_steps()	// # of steps left to take.
+		{ return major_distance/major_frame_incr; }
 	virtual ~Zombie();
 	};
 
